Add defer and inert to the list of boolean attributes (#356)